--- a/Kitodo/src/main/webapp/pages/docketEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/docketEdit.xhtml
@@ -27,7 +27,7 @@
         <script>
             window.onload = function () {checkForm('editForm')};
         </script>
-        <h3>
+        <h3 id="headerText">
             <h:outputText value="#{msgs.editDocket} (#{DocketForm.myDocket.title})"
                           rendered="#{not empty DocketForm.myDocket.title}"/>
             <h:outputText value="#{msgs.createNewDocket}"
