--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -28,7 +28,7 @@
         <script>
             window.onload = function () {checkForm('editForm')};
         </script>
-        <h3>
+        <h3 id="headerText">
             <h:outputText value="#{msgs.projectEdit} (#{ProjectForm.myProjekt.title})" rendered="#{not empty ProjectForm.myProjekt.title}"/>
             <h:outputText value="#{msgs.newProject}" rendered="#{empty ProjectForm.myProjekt.folders}"/>
             <h:outputText value="#{msgs.duplicateProject}" rendered="#{empty ProjectForm.myProjekt.title and not empty ProjectForm.myProjekt.folders}"/>
