--- a/Kitodo/src/main/webapp/pages/templateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/templateEdit.xhtml
@@ -27,7 +27,7 @@
         <script>
             window.onload = function () {checkForm('editForm')};
         </script>
-        <h3>
+        <h3 id="headerText">
             <h:outputText value="#{msgs.editTemplate} (#{TemplateForm.template.title})" rendered="#{not empty TemplateForm.template.title}"/>
             <h:outputText value="#{msgs.newTemplate}" rendered="#{empty TemplateForm.template.title}"/>
             <h:outputText value="#{msgs.duplicateTemplate}" rendered="#{empty TemplateForm.template.title and not empty TemplateForm.template.docket}"/>
