--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -34,7 +34,7 @@
         <script>
             window.onload = function () {checkForm('editForm')};
         </script>
-        <h3>
+        <h3 id="headerText">
             <h:outputText value="#{msgs.userEdit} (#{UserForm.userObject.fullName})"
                           rendered="#{isEditMode}"/>
             <h:outputText value="#{msgs.userCreate}"
