--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -34,7 +34,7 @@
         <script>
             window.onload = function () {checkForm('editForm')};
         </script>
-        <h3>
+        <h3 id="headerText">
             <h:outputText value="#{msgs.userGroupEdit} (#{UserGroupForm.userGroup.title})"
                           rendered="#{isEditMode}"/>
             <h:outputText value="#{msgs.createNewUserGroup}" rendered="#{isCreateMode}"/>
