Decrease amount of redundant string in selenium pages

--- a/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
@@ -61,7 +61,7 @@
     </ui:define>
 
     <ui:define name="pageTabView">
-        <p:tabView id="ldabgroupTabView">
+        <p:tabView id="ldapGroupTabView">
             <p:tab id="labgroupTab" title="#{msgs.details}">
                 <p:panelGrid columns="2" layout="grid">
                     <p:row>
