--- a/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
@@ -65,7 +65,7 @@
     </ui:define>
 
     <ui:define name="pageTabView">
-        <p:tabView id="ldabgroupTabView">
+        <p:tabView id="ldapGroupTabView">
             <p:tab id="labgroupTab" title="#{msgs.details}">
                 <p:panelGrid columns="2" layout="grid">
                     <p:row>
