--- a/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
+++ b/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
@@ -26,7 +26,7 @@
         <h3>
             <h:outputText value="#{msgs.createNewProcess} (#{msgs.template}: '#{ProzesskopieForm.template.title}')"/>
         </h3>
-        <p:commandButton id="saveButton"
+        <p:commandButton id="save"
                          value="#{msgs.save}"
                          action="#{ProzesskopieForm.createNewProcess}"
                          icon="fa fa-floppy-o fa-lg" iconPos="right"
