--- a/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
@@ -40,7 +40,7 @@
             <h:outputText value="#{msgs.ldapServerView}"
                           rendered="#{isViewMode}"/>
         </h3>
-        <p:commandButton id="saveButton"
+        <p:commandButton id="save"
                          rendered="#{isEditMode || isCreateMode}"
                          widgetVar="save"
                          value="#{msgs.save}"
@@ -53,7 +53,7 @@
                          update="notifications"/>
         <p:commandButton id="saveButtonToggler"
                          actionListener="#{LdapServerForm.setSaveDisabled(false)}"
-                         update="saveButton"
+                         update="save"
                          style="display:none;"/>
         <p:button id="cancel" value="#{msgs.cancel}"
                   outcome="users.jsf?id=#{UserForm.activeTabIndex}" onclick="setConfirmUnload(false);"
