--- a/Kitodo/src/main/webapp/pages/login.xhtml
+++ b/Kitodo/src/main/webapp/pages/login.xhtml
@@ -14,8 +14,12 @@
 <ui:composition template="/WEB-INF/templates/base.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:sec="http://www.springframework.org/security/tags">
+    <f:metadata>
+        <f:viewAction action="#{LoginForm.redirectToDesktop()}"/>
+    </f:metadata>
 
     <ui:define name="header">
         <div class="wrapper">
