Add frontend pages for user group clients

--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -71,90 +71,10 @@
     <ui:define name="pageTabView">
         <p:tabView id="usergroupTabView">
             <p:tab id="usergroupTab" title="#{msgs.details}">
-                <p:panelGrid columns="1" layout="grid">
-                    <p:row>
-                        <div>
-                            <p:outputLabel for="titleInput" value="#{msgs.title}"/>
-                            <p:inputText id="titleInput" class="input" disabled="#{isViewMode}"
-                                         value="#{UserGroupForm.userGroup.title}" placeholder="#{msgs.title}"
-                                         required="#{empty param['editForm:saveButtonToggler']}"/>
-                        </div>
-                        <div>
-                            <p:panelGrid columns="3" layout="grid">
-                                <!--global authorities-->
-
-                                <h:panelGroup>
-                                    <h3 style="margin-bottom: 20px">
-                                        <h:outputText value="#{msgs.authoritiesGlobal}"/>
-                                    </h3>
-                                    <p:pickList id="authoritiesGlobalPick"
-                                                showSourceFilter="true" showTargetFilter="true"
-                                                filterMatchMode="contains"
-                                                responsive="true"
-                                                disabled="#{isViewMode}"
-                                                value="#{UserGroupForm.globalAssignableAuthorities}"
-                                                converter="#{authorityConverter}"
-                                                var="authority"
-                                                itemLabel="#{authority.getTitleWithoutSuffix()}"
-                                                itemValue="#{authority}"
-                                                onTransfer="toggleSave()">
-                                        <f:facet name="sourceCaption"
-                                                 style="color: #000;">#{msgs.available}</f:facet>
-                                        <f:facet name="targetCaption"
-                                                 style="color: #000;">#{msgs.assigned}</f:facet>
-                                    </p:pickList>
-                                </h:panelGroup>
-
-                                <!--client authorities-->
-                                <h:panelGroup>
-                                    <h3 style="margin-bottom: 20px">
-                                        <h:outputText value="#{msgs.authoritiesClient}"/>
-                                    </h3>
-                                    <p:pickList id="authoritiesClientPick"
-                                                value="#{UserGroupForm.clientAssignableAuthorities}"
-                                                converter="#{authorityConverter}"
-                                                var="authority"
-                                                disabled="#{isViewMode}"
-                                                showSourceFilter="true" showTargetFilter="true"
-                                                filterMatchMode="contains"
-                                                responsive="true"
-                                                onTransfer="toggleSave()"
-                                                itemLabel="#{authority.getTitleWithoutSuffix()}"
-                                                itemValue="#{authority}">
-                                        <f:facet name="sourceCaption"
-                                                 style="color: #000;">#{msgs.available}</f:facet>
-                                        <f:facet name="targetCaption"
-                                                 style="color: #000;">#{msgs.assigned}</f:facet>
-                                    </p:pickList>
-                                </h:panelGroup>
-
-                                <!--project authorities-->
-                                <h:panelGroup>
-                                    <h3 style="margin-bottom: 20px">
-                                        <h:outputText value="#{msgs.authoritiesProject}"/>
-                                    </h3>
-                                    <p:pickList id="authoritiesProjectPick"
-                                                value="#{UserGroupForm.projectAssignableAuthorities}"
-                                                converter="#{authorityConverter}"
-                                                showSourceFilter="true" showTargetFilter="true"
-                                                disabled="#{isViewMode}"
-                                                filterMatchMode="contains"
-                                                responsive="true"
-                                                var="authority"
-                                                onTransfer="toggleSave()"
-                                                itemLabel="#{authority.getTitleWithoutSuffix()}"
-                                                itemValue="#{authority}">
-                                        <f:facet name="sourceCaption"
-                                                 style="color: #000;">#{msgs.available}</f:facet>
-                                        <f:facet name="targetCaption"
-                                                 style="color: #000;">#{msgs.assigned}</f:facet>
-                                    </p:pickList>
-                                </h:panelGroup>
-                            </p:panelGrid>
-                        </div>
-                    </p:row>
-                    <p:row/>
-                </p:panelGrid>
+                <ui:include src="/WEB-INF/templates/includes/usergroupEdit/details.xhtml"/>
+            </p:tab>
+            <p:tab id="clientTab" title="#{msgs.clientList}">
+                <ui:include src="/WEB-INF/templates/includes/usergroupEdit/clients.xhtml"/>
             </p:tab>
         </p:tabView>
     </ui:define>
@@ -176,8 +96,8 @@
             </a>
         </li>
     </ui:define>
-    <!-- add user groups dialog -->
+    <!-- add clients dialog -->
     <ui:define name="dialog">
-        <ui:include src="/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml"/>
+        <ui:include src="/WEB-INF/templates/includes/usergroupEdit/clientsPopup.xhtml"/>
     </ui:define>
 </ui:composition>
