Refactor add / delete methods in UserForm

--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -164,7 +164,7 @@
                     <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
                         <p:commandLink id="deleteFromUserGroup"
                                        rendered="#{isEditMode || isCreateMode}"
-                                       action="#{UserForm.deleteFromGroup}"
+                                       action="#{UserForm.deleteFromUserGroup}"
                                        title="#{msgs.ausGruppeLoeschen}"
                                        immediate="true"
                                        oncomplete="toggleSave()"
