Add selenium test for save new process properties

--- a/Kitodo/src/main/webapp/pages/processEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/processEdit.xhtml
@@ -55,7 +55,7 @@
     </ui:define>
 
     <ui:define name="pageTabView">
-        <p:tabView id="tabs" cache="false">
+        <p:tabView id="processTabView" cache="false">
             <p:tab title="#{msgs.processDetails}" id="details">
                 <ui:include src="/WEB-INF/templates/includes/processEdit/details.xhtml"/>
             </p:tab>
