--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -54,10 +54,12 @@
     <ui:define name="pageTabView">
         <p:tabView id="processesTabView" activeIndex="#{ProcessForm.activeTabIndex}">
             <p:ajax event="tabChange" listener="#{ProcessForm.onTabChange}"/>
-            <p:tab title="#{msgs.processList}">
+            <p:tab title="#{msgs.processList}" id="processTab"
+                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('viewAllProcesses')}">
                 <ui:include src="/WEB-INF/templates/includes/processes/processList.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.batches}">
+            <p:tab title="#{msgs.batches}" id="batchTab"
+                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('viewAllBatches')}">
                 <ui:include src="/WEB-INF/templates/includes/processes/batchList.xhtml"/>
             </p:tab>
         </p:tabView>
